--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-GB">
+<html lang="en-GB" class="has-navbar-fixed-top">
 
 <head>
 
@@ -7,7 +7,15 @@
 
   <!-- SEO -->
   <title>Law Collection</title>
-  <link rel="shortcut icon" href="favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#0e91d7">
+  <meta name="apple-mobile-web-app-title" content="Law Collection">
+  <meta name="application-name" content="Law Collection">
+  <meta name="msapplication-TileColor" content="#2d89ef">
+  <meta name="theme-color" content="#ffffff">
 
   <meta name="viewport" content="minimum-scale=1.0,initial-scale=1.0">
 
@@ -16,6 +24,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/nouislider@14.1.1/distribute/nouislider.css"
     integrity="sha256-CmL0R8uqObLbJjq6ncll1SKozYT4XPYkvnlTtqkNEGw=" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="style.css" />
+  <link rel="stylesheet" type="text/css" href="shared.css" />
 
   <script src="https://cdn.jsdelivr.net/npm/wnumb@1.2.0/wNumb.min.js"
     integrity="sha256-DkHIFUKQfqQ7jA6GnWR9ZyB4Jb+j+dOuY12vnYq8xjk=" crossorigin="anonymous"></script>
@@ -27,7 +36,7 @@
 
 <body>
 
-  <!-- <nav class="navbar" role="navigation" aria-label="main navigation">
+  <nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
   
       <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -39,31 +48,24 @@
   
     <div id="navbarBasicExample" class="navbar-menu">
       <div class="navbar-start">
-        <a class="navbar-item">
+        <a class="navbar-item" href="/index.html">
           Home
         </a>
   
-        <a class="navbar-item">
-          Documentation
+        <a class="navbar-item" href="/about.html">
+          About
         </a>
   
+        <a class="navbar-item" href="/history.html">
+          History
+        </a>
 
       </div>
   
       <div class="navbar-end">
-        <div class="navbar-item">
-          <div class="buttons">
-            <a class="button is-primary">
-              <strong>Sign up</strong>
-            </a>
-            <a class="button is-light">
-              Log in
-            </a>
-          </div>
-        </div>
       </div>
     </div>
-  </nav> -->
+  </nav>
   <!-- TEMPLATES -->
   <div id="template" class="tile video is-child is-3" onclick="changeVideo(this)">
     <!-- The magical tile element! -->
