--- a/about.html
+++ b/about.html
@@ -63,7 +63,9 @@
 				<p>
 				This website serves as a repository of the many bad musical performances that have been collated over a decade of Christmas music collections, and also a select few less bad ones.
 				</p>
-			</div>
+				</div>
 		</section>
+		<iframe width="1440" height="619" src="https://www.youtube.com/embed/68C1X1wEAZc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			
 	</body>
 </html>
