--- a/about.html
+++ b/about.html
@@ -1,71 +1,77 @@
 <!DOCTYPE html>
 <html class="has-navbar-fixed-top">
-	<head>
-		<meta charset="utf-8">
 
-		<!-- SEO -->
-		<title>Law Collection - About</title>
-		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-		<link rel="manifest" href="/site.webmanifest">
-		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#0e91d7">
-		<meta name="apple-mobile-web-app-title" content="Law Collection">
-		<meta name="application-name" content="Law Collection">
-		<meta name="msapplication-TileColor" content="#2d89ef">
-		<meta name="theme-color" content="#ffffff">
+<head>
+	<meta charset="utf-8">
 
-		<meta name="viewport" content="minimum-scale=1.0,initial-scale=1.0">
+	<!-- SEO -->
+	<title>Law Collection - About</title>
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="manifest" href="/site.webmanifest">
+	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#0e91d7">
+	<meta name="apple-mobile-web-app-title" content="Law Collection">
+	<meta name="application-name" content="Law Collection">
+	<meta name="msapplication-TileColor" content="#2d89ef">
+	<meta name="theme-color" content="#ffffff">
 
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"
-    integrity="sha256-D9M5yrVDqFlla7nlELDaYZIpXfFWDytQtiV+TaH6F1I=" crossorigin="anonymous">
-		<link rel="stylesheet" type="text/css" href="shared.css" />
+	<meta name="viewport" content="minimum-scale=1.0,initial-scale=1.0">
 
-		<script src="shared.js"></script>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"
+		integrity="sha256-D9M5yrVDqFlla7nlELDaYZIpXfFWDytQtiV+TaH6F1I=" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="shared.css" />
 
-	</head>
-	<body>
-		<nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
-			<div class="navbar-brand">
-		
-				<a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-					<span aria-hidden="true"></span>
-					<span aria-hidden="true"></span>
-					<span aria-hidden="true"></span>
+	<script src="shared.js"></script>
+
+</head>
+
+<body>
+	<nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
+		<div class="navbar-brand">
+
+			<a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
+				data-target="navbarBasicExample">
+				<span aria-hidden="true"></span>
+				<span aria-hidden="true"></span>
+				<span aria-hidden="true"></span>
+			</a>
+		</div>
+
+		<div id="navbarBasicExample" class="navbar-menu">
+			<div class="navbar-start">
+				<a class="navbar-item" href="/index.html">
+					Home
 				</a>
-			</div>
-		
-			<div id="navbarBasicExample" class="navbar-menu">
-				<div class="navbar-start">
-					<a class="navbar-item" href="/index.html">
-						Home
-					</a>
-		
-					<a class="navbar-item" href="/about.html">
-						About
-					</a>
-		
-					<a class="navbar-item" href="/history.html">
-						History
-					</a>
-	
-				</div>
-		
-				<div class="navbar-end">
-	
-				</div>
-			</div>
-		</nav>
 
-		<section class="section">
-			<div class="container">
-				<h1 class="title">About</h1>
-				<p>
-				This website serves as a repository of the many bad musical performances that have been collated over a decade of Christmas music collections, and also a select few less bad ones.
-				</p>
-				</div>
-		</section>
-		<iframe width="1440" height="619" src="https://www.youtube.com/embed/68C1X1wEAZc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			
-	</body>
+				<a class="navbar-item" href="/about.html">
+					About
+				</a>
+
+				<a class="navbar-item" href="/history.html">
+					History
+				</a>
+
+			</div>
+
+			<div class="navbar-end">
+
+			</div>
+		</div>
+	</nav>
+
+	<section class="section">
+		<div class="container">
+			<h1 class="title">About</h1>
+			<p>
+				This website serves as a repository of the many bad musical performances that have been collated over a
+				decade of Christmas music collections, and also a select few less bad ones.
+			</p>
+		</div>
+	</section>
+	<iframe id="trailer" width="1440" height="619" src="https://www.youtube.com/embed/68C1X1wEAZc" frameborder="0"
+		allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+</body>
+
 </html>
