--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     <div class="hero-body" id="infoHero">
 
       <h1 class="title" id="songTitle">Title</h1>
+      <h3 class="subtitle" id="year"></h3>
       <h2 class="subtitle" id="songArtist">Artist</h2>
       <h3 id="performer" class="title is-5">Performer</h3>
 
