added to about page

--- a/about.html
+++ b/about.html
@@ -66,7 +66,35 @@
 			<p>
 				This website serves as a repository of the many bad musical performances that have been collated over a
 				decade of Christmas music collections, and also a select few less bad ones.
+				<br>
+				<br>
+				The website was a collaboration between Matthew and Allie. Allie—although rather less conspicuous on the
+				site—did about as much of the website making (designing, coding, debugging, etc) as Matthew did of the
+				performing: not quite all but the large majority by a long way.
 			</p>
+			<h2 class="subtitle">How to use the site</h2>
+			<p>
+				The site is designed to hopefully be fairly straightforward to use: the main 
+				<a href="/index.html">homepage</a> shows a video at the top, and allows you to browse other videos
+				below. The slider allows you to filter by year (personally I reckon it all started going downhill after
+				about 2012…). The tags let you sort to only performances of a certain category ('Best of' has been
+				curated for those who don't actually want to watch all 133 videos). The instruments can also be filtered
+				in the same way (I personally recommend the euphonium back-catalogue), as can the performers. Also on
+				the site are this page, and the <a href="/history.html">History</a> page, which gives a brief history of
+				the decade-long musical endeavour.
+				<br><br>
+				If you habitually listen to music on/through YouTube (eg through a TV or smart speaker) and would find
+				that easier than watching through the website, I have made a <a
+					href="https://www.youtube.com/playlist?list=PLKUsbgq2XqTjQ9EDGChdbZE7MPTTaGycC">YouTube playlist</a>
+				with all the videos on this site – you can use this to listen to the recordings however you usually use
+				YouTube (on a desktop computer, phone, tablet, TV, etc). It <i>should</i> contain all the videos, but it
+				is entirely possible that some have been missed!
+				<br><br>
+				As may have become apparent by this point, this site is a work in progress, so things may change over
+				the course of time (or we may get distracted by other things in life and never finish adding the
+				content/features we originally intended to). And if something doesn't work, let us know!
+			</p>
+
 		</div>
 	</section>
 	<iframe id="trailer" width="1440" height="619" src="https://www.youtube.com/embed/68C1X1wEAZc" frameborder="0"
