--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
     <!-- Hero footer: will stick at the bottom -->
     <div class="hero-foot ">
 
-      <!-- <h1 class="title" id="matthew-label">
-        BROWSE VIDEOS
-      </h1> -->
+      <h1 class="title" id="matthew-label">
+        Browse Videos
+      </h1>
 
       <div class="tile is-ancestor">
 
