--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
 			</p>
 			<h2 class="subtitle">How to use the site</h2>
 			<p>
-				The site is designed to hopefully be fairly straightforward to use: the main 
+				The site is designed to hopefully be fairly straightforward to use: the main
 				<a href="/index.html">homepage</a> shows a video at the top, and allows you to browse other videos
 				below. The slider allows you to filter by year (personally I reckon it all started going downhill after
 				about 2012…). The tags let you sort to only performances of a certain category ('Best of' has been
@@ -97,7 +97,7 @@
 
 		</div>
 	</section>
-	<iframe id="trailer" width="1440" height="619" src="https://www.youtube.com/embed/68C1X1wEAZc" frameborder="0"
+	<iframe id="trailer" src="https://www.youtube.com/embed/68C1X1wEAZc" frameborder="0"
 		allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 </body>
