--- a/index.html
+++ b/index.html
@@ -38,30 +38,30 @@
 
   <nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
-  
+
       <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
         <span aria-hidden="true"></span>
         <span aria-hidden="true"></span>
         <span aria-hidden="true"></span>
       </a>
     </div>
-  
+
     <div id="navbarBasicExample" class="navbar-menu">
       <div class="navbar-start">
         <a class="navbar-item" href="/index.html">
           Home
         </a>
-  
+
         <a class="navbar-item" href="/about.html">
           About
         </a>
-  
+
         <a class="navbar-item" href="/history.html">
           History
         </a>
 
       </div>
-  
+
       <div class="navbar-end">
       </div>
     </div>
@@ -124,12 +124,12 @@
             </div>
 
               <div class="tags tile is-parent is-12">
-                <div class="tile is-child is-7">
+                <div class="tile is-child is-5">
                   <div class="tags" id="instruments">
                     <label>Instruments:</label>
                   </div>
                 </div>
-                <div class="tile is-child is-5">
+                <div class="tile is-child is-7">
                   <div class="tags" id="player">
                     <label>Performer:</label>
                   </div>
@@ -137,7 +137,7 @@
               </div>
 
 
-              <div class="field is-grouped is-parent is-12">
+              <div class="field is-grouped is-parent is-12" id="searchBar">
                 <p class="control is-expanded">
                   <input class="input" id="search" type="text" placeholder="Search for a year, title or original artist">
                 </p>
